# SwaggerBackend/api/swagger.yaml
@@ -6,7 +6,7 @@ info:
   title: "Blog"
 host: "localhost:3000"
 tags:
-- name: "user"
+- name: "users"
   description: "registered users"
 - name: "articles"
   description: "available articles"
@@ -15,12 +15,12 @@ tags:
 schemes:
 - "http"
 paths:
-  /users:
+  /api/users:
     get:
       tags:
-      - "user"
+      - "users"
       summary: "Retrieve all users"
-      operationId: "usersGET"
+      operationId: "apiUsersGET"
       produces:
       - "application/json"
       parameters: []
@@ -31,12 +31,12 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/User"
-      x-swagger-router-controller: "User"
+      x-swagger-router-controller: "Users"
     post:
       tags:
-      - "user"
+      - "users"
       summary: "Create a new user"
-      operationId: "usersPOST"
+      operationId: "apiUsersPOST"
       consumes:
       - "application/json"
       produces:
@@ -55,13 +55,13 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/User"
-      x-swagger-router-controller: "User"
-  /users/{user-id}:
+      x-swagger-router-controller: "Users"
+  /api/users/{user-id}:
     get:
       tags:
-      - "user"
+      - "users"
       summary: "Retrieve a specific user"
-      operationId: "usersUser_idGET"
+      operationId: "apiUsersUser_idGET"
       produces:
       - "application/json"
       parameters:
@@ -69,19 +69,19 @@ paths:
         in: "path"
         description: "User ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       responses:
         200:
           description: "successful operation"
           schema:
             $ref: "#/definitions/User"
-      x-swagger-router-controller: "User"
+      x-swagger-router-controller: "Users"
     put:
       tags:
-      - "user"
+      - "users"
       summary: "Update an existing user"
-      operationId: "usersUser_idPUT"
+      operationId: "apiUsersUser_idPUT"
       consumes:
       - "application/json"
       produces:
@@ -91,8 +91,8 @@ paths:
         in: "path"
         description: "User ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       - in: "body"
         name: "body"
         description: "User to be updated"
@@ -106,12 +106,12 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/User"
-      x-swagger-router-controller: "User"
+      x-swagger-router-controller: "Users"
     delete:
       tags:
-      - "user"
+      - "users"
       summary: "Delete an existing user"
-      operationId: "usersUser_idDELETE"
+      operationId: "apiUsersUser_idDELETE"
       produces:
       - "application/json"
       parameters:
@@ -119,18 +119,18 @@ paths:
         in: "path"
         description: "User ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       responses:
         204:
           description: "successful operation"
-      x-swagger-router-controller: "User"
-  /articles:
+      x-swagger-router-controller: "Users"
+  /api/articles:
     get:
       tags:
       - "articles"
       summary: "Retrieve all available articles"
-      operationId: "articlesGET"
+      operationId: "apiArticlesGET"
       produces:
       - "application/json"
       parameters: []
@@ -146,7 +146,7 @@ paths:
       tags:
       - "articles"
       summary: "Create a new article"
-      operationId: "articlesPOST"
+      operationId: "apiArticlesPOST"
       consumes:
       - "application/json"
       produces:
@@ -166,19 +166,19 @@ paths:
             items:
               $ref: "#/definitions/Article"
       x-swagger-router-controller: "Articles"
-  /articles/{article-id}:
+  /api/articles/{article-id}:
     get:
       tags:
       - "articles"
       summary: "Retrieve a specific article"
-      operationId: "articlesArticle_idGET"
+      operationId: "apiArticlesArticle_idGET"
       parameters:
       - name: "article-id"
         in: "path"
         description: "Article ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       responses:
         200:
           description: "successful operation"
@@ -189,7 +189,7 @@ paths:
       tags:
       - "articles"
       summary: "Delete an existing article"
-      operationId: "articlesArticle_idDELETE"
+      operationId: "apiArticlesArticle_idDELETE"
       produces:
       - "application/json"
       parameters:
@@ -197,18 +197,18 @@ paths:
         in: "path"
         description: "Article ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       responses:
         204:
           description: "successful operation"
       x-swagger-router-controller: "Articles"
-  /articles/comments/{article-id}:
+  /api/articles/comments/{article-id}:
     get:
       tags:
       - "articles"
       summary: "Retrieve all comments from an article"
-      operationId: "articlesCommentsArticle_idGET"
+      operationId: "apiArticlesCommentsArticle_idGET"
       produces:
       - "application/json"
       parameters:
@@ -216,8 +216,8 @@ paths:
         in: "path"
         description: "Article ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       responses:
         200:
           description: "successful operation"
@@ -226,12 +226,12 @@ paths:
             items:
               $ref: "#/definitions/Comment"
       x-swagger-router-controller: "Articles"
-  /comments/{comment-id}:
+  /api/comments/{comment-id}:
     get:
       tags:
       - "comments"
       summary: "Retrieve a specific comment"
-      operationId: "commentsComment_idGET"
+      operationId: "apiCommentsComment_idGET"
       produces:
       - "application/json"
       parameters:
@@ -239,8 +239,8 @@ paths:
         in: "path"
         description: "Comment ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       responses:
         200:
           description: "successful operation"
@@ -251,24 +251,24 @@ paths:
       tags:
       - "comments"
       summary: "Delete an existing comment"
-      operationId: "commentsComment_idDELETE"
+      operationId: "apiCommentsComment_idDELETE"
       parameters:
       - name: "comment-id"
         in: "path"
         description: "Comment ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       responses:
         204:
           description: "successful operation"
       x-swagger-router-controller: "Comments"
-  /comments/{comment-id}/{article-id}:
+  /api/comments/{comment-id}/{article-id}:
     post:
       tags:
       - "comments"
       summary: "Create a new comment"
-      operationId: "commentsComment_idArticle_idPOST"
+      operationId: "apiCommentsComment_idArticle_idPOST"
       consumes:
       - "application/json"
       produces:
@@ -278,14 +278,14 @@ paths:
         in: "path"
         description: "Article ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       - name: "comment-id"
         in: "path"
         description: "Comment ID"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       - in: "body"
         name: "body"
         description: "Comment to be created"
@@ -305,15 +305,11 @@ definitions:
     - "city"
     - "email"
     - "firstname"
-    - "id"
     - "lastname"
     - "street"
     - "streetNumber"
     - "zipCode"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       firstname:
         type: "string"
       lastname:
@@ -332,14 +328,14 @@ definitions:
         type: "string"
       password:
         type: "string"
+        format: "password"
     example:
-      zipCode: 6
+      zipCode: 0
       firstname: "firstname"
       password: "password"
       city: "city"
-      streetNumber: 1
+      streetNumber: 6
       street: "street"
-      id: 0
       email: "email"
       lastname: "lastname"
   UserCreate:
@@ -350,9 +346,6 @@ definitions:
     - "lastname"
     - "password"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       firstname:
         type: "string"
         maxLength: 50
@@ -376,16 +369,16 @@ definitions:
         maxLength: 50
       password:
         type: "string"
+        format: "password"
         minLength: 6
         maxLength: 50
     example:
-      zipCode: 6
+      zipCode: 0
       firstname: "firstname"
       password: "password"
       city: "city"
-      streetNumber: 1
+      streetNumber: 6
       street: "street"
-      id: 0
       email: "email"
       lastname: "lastname"
   Article:
@@ -394,13 +387,9 @@ definitions:
     - "author"
     - "date"
     - "headline"
-    - "id"
     - "text"
     - "topic"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       headline:
         type: "string"
       author:
@@ -411,12 +400,13 @@ definitions:
         type: "string"
         format: "date"
       topic:
-        type: "string"
+        type: "array"
+        items:
+          format: string
     example:
       date: "2000-01-23"
       author: "author"
-      topic: "topic"
-      id: 0
+      topic: []
       text: "text"
       headline: "headline"
   ArticleCreate:
@@ -427,9 +417,6 @@ definitions:
     - "text"
     - "topic"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       headline:
         type: "string"
       author:
@@ -441,13 +428,13 @@ definitions:
         type: "string"
         format: "date"
       topic:
-        type: "string"
-        maxLength: 50
+        type: "array"
+        items:
+          format: string
     example:
       date: "2000-01-23"
       author: "author"
-      topic: "topic"
-      id: 0
+      topic: []
       text: "text"
       headline: "headline"
   Comment:
@@ -456,15 +443,10 @@ definitions:
     - "articleId"
     - "author"
     - "date"
-    - "id"
     - "text"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       articleId:
-        type: "integer"
-        format: "int64"
+        type: "string"
       author:
         type: "string"
       text:
@@ -475,8 +457,7 @@ definitions:
     example:
       date: "2000-01-23"
       author: "author"
-      articleId: 6
-      id: 0
+      articleId: "articleId"
       text: "text"
   CommentCreate:
     type: "object"
@@ -486,12 +467,9 @@ definitions:
     - "date"
     - "text"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       articleId:
-        type: "integer"
-        format: "int64"
+        type: "string"
+        maxLength: 50
       author:
         type: "string"
         maxLength: 50
@@ -500,13 +478,8 @@ definitions:
       date:
         type: "string"
         format: "date"
-      topic:
-        type: "string"
-        maxLength: 50
     example:
       date: "2000-01-23"
       author: "author"
-      articleId: 6
-      topic: "topic"
-      id: 0
+      articleId: "articleId"
       text: "text"
