# SwaggerBackend/controllers/Comments.js
@@ -3,11 +3,11 @@
 var utils = require('../utils/writer.js');
 var Comments = require('../service/CommentsService');
 
-module.exports.commentsComment_idArticle_idPOST = function commentsComment_idArticle_idPOST (req, res, next) {
+module.exports.apiCommentsComment_idArticle_idPOST = function apiCommentsComment_idArticle_idPOST (req, res, next) {
   var articleId = req.swagger.params['article-id'].value;
   var commentId = req.swagger.params['comment-id'].value;
   var body = req.swagger.params['body'].value;
-  Comments.commentsComment_idArticle_idPOST(articleId,commentId,body)
+  Comments.apiCommentsComment_idArticle_idPOST(articleId,commentId,body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -16,9 +16,9 @@ module.exports.commentsComment_idArticle_idPOST = function commentsComment_idArt
     });
 };
 
-module.exports.commentsComment_idDELETE = function commentsComment_idDELETE (req, res, next) {
+module.exports.apiCommentsComment_idDELETE = function apiCommentsComment_idDELETE (req, res, next) {
   var commentId = req.swagger.params['comment-id'].value;
-  Comments.commentsComment_idDELETE(commentId)
+  Comments.apiCommentsComment_idDELETE(commentId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -27,9 +27,9 @@ module.exports.commentsComment_idDELETE = function commentsComment_idDELETE (req
     });
 };
 
-module.exports.commentsComment_idGET = function commentsComment_idGET (req, res, next) {
+module.exports.apiCommentsComment_idGET = function apiCommentsComment_idGET (req, res, next) {
   var commentId = req.swagger.params['comment-id'].value;
-  Comments.commentsComment_idGET(commentId)
+  Comments.apiCommentsComment_idGET(commentId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
